Cleaned a bit of the code

--- a/webgl-raymarching/index.html
+++ b/webgl-raymarching/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>3D Fractals</title>
+        <title>Esponja Menger</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style>
@@ -24,7 +24,7 @@
 		</style>
     </head>
     <body onload = "start();">
-		<canvas id="game-surface" style="width: 100vw; height: 100vh; display: block;">
+		<canvas id="canvas" style="width: 100vw; height: 100vh; display: block;">
 			Your browser does not support HTML5
 		</canvas>
 
